style: Set overflow styles to prevent content from scrolling

--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,5 +1,6 @@
 .modal {
   max-height: 81.5vh;
+  overflow-y: scroll;
 }
 
 .modal-header > a {
